--- a/css/module.css
+++ b/css/module.css
@@ -4,7 +4,7 @@
 }
 
 .nav__home {
-  margin: 1em 0 1em 30px;
+  margin: 0;
 }
 
 .nav__list li {
